[FIX] sap.m.IconTabBar: overflow button focus outline now visible during mousedown
SNOW: DINC0944760

--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/IconTabBar.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/IconTabBar.less
@@ -762,7 +762,8 @@ html.sap-desktop {
 	.sapMITHStartOverflow,
 	.sapMITHEndOverflow {
 
-		.sapMITBItem:not(.sapUiDnDDragging):focus {
+		.sapMITBItem:not(.sapUiDnDDragging):focus,
+		.sapMITBItem:not(.sapUiDnDDragging):active:focus {
 
 			&::after {
 				border-radius: 1.75rem;
